# Kernel_Image_Convolution

./: README.md
Hybrid_ImageConvolution/: CMakeCache.txt  CMakeLists.txt  Hybrid_ImageConvolution  Hybrid_ImageConvolution.cbp  Hybrid_Main.c  Makefile  a.out  cmake_install.cmake
Hybrid_ImageConvolution/src/: Communication.c  Communication.h  ConvolutionProcess.c  ConvolutionProcess.h
MPI_ImageConvolution/: CMakeCache.txt  CMakeLists.txt  ImageConvolution_Main.c  MPI_ImageConvolution  MPI_ImageConvolution.cbp  Makefile  a.out  cmake_install.cmake
MPI_ImageConvolution/src/: ConvolutionProcess.c  MPI_Setup.h  Parallel_ReadWriteIO.c  a.out
Results/: Hybrid(MPI+OMP) Time Measurements.xlsx  MPI Time Measurements.xlsx
